docs/docs-worklets/src/css/overrides.css
:root {
  --swm-expandable-transition: transform 200ms ease;
  --doc-sidebar-width: 410px !important;
}

table {
  display: table;
  width: 100%;
}

@media (max-width: 1280px) {
  table:not([class*='platform-compatibility']) {
    display: block;
    width: 100%;
  }
}

table thead tr {
  border-bottom: 1px solid var(--ifm-table-border-color);
}

.platform-compatibility {
  table-layout: fixed;
}

.platform-compatibility td {
  text-align: center;
}

.compatibility {
  overflow-x: auto;
}

.compatibility table {
  display: table;
  width: 100%;
  white-space: nowrap;
}

.fixed table {
  table-layout: fixed;
}

.compatibility td {
  padding: 0;
  border: transparent 2px solid;
  background: var(--ifm-background-color);
}

.compatibility th {
  background: var(--ifm-background-color);
  border: transparent 2px solid;
}

.header-github {
  margin-left: 1.5em;
}

.header-github:before {
  display: flex;
  height: 24px;
  width: 24px;

  mask: url(/static/img/github.svg) no-repeat 100% 100%;
  mask-size: cover;
  content: '';

  background-color: var(--ifm-navbar-link-color) !important;
}

@media (max-height: 768px) {
  .header-github:before {
    height: 20px;
    width: 20px;
  }
}

.header-github:hover:before {
  background-color: var(--ifm-navbar-link-hover-color);
}

[class*='navbarLanding'] .header-github:before,
[class*='navbarLanding'] .header-github:hover:before {
  background-color: var(--swm-off-white);
}

[class*='codeBlockContent'] pre {
  border: 1px solid var(--swm-border);
}

[class*='codeBlockContent'] pre,
[class*='codeBlockContent'] code {
  border-radius: 0;
  background-color: var(--swm-off-background);
}

/* Add small padding, when some of the lines are too long in a code block */
[class*='codeBlockLines'] span:last-of-type {
  margin-right: 1em;
}

.theme-doc-version-badge {
  color: var(--swm-version-badge);
  background: var(--swm-version-badge-background);
  padding: 6px;
  border-radius: 8px;
  border: none;
  margin-bottom: 8px;
}

.snack-link {
  display: inline-block;
  margin-bottom: 25px;
}

[class*='DocCategoryGeneratedIndexPage'][class*='title'] {
  font-size: var(--swm-h1-font-size);
}

/* TODO: Remove after @swmansion-t-rex-ui 0.0.11 patch */
button[class*='DocSearch-Button'] {
  margin: 0 !important;
}

/* versions dropdown on landing */

[class*='plugin-pages'] [class*='dropdown--right'] > a:first-child {
  color: var(--swm-off-white) !important;
}

[class*='plugin-pages'] [class*='dropdown__menu'] a:hover {
  color: var(--swm-dropdown-versions-item-hover) !important;
}

/* examples sidebar */

[class*='plugin-blog'] [class*='sidebar']:not([class*='navbar-sidebar']) {
  background-color: transparent;
}

.footer .footer__copyright {
  justify-content: center;
  flex-direction: column-reverse;
  gap: 60px;
  margin-bottom: 28px;
}

.navbar .navbar__title {
  margin-left: 0;
  display: flex;
}

@media (max-width: 996px) {
  .navbar .navbar__title {
    display: none;
  }

  .footer .footer__copyright {
    gap: 30px;
    margin-bottom: 0;
    align-items: center;
    p {
      text-align: center;
    }
  }
}

[class*='headerWithBadges'] {
  align-items: baseline;
}

